--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cakes-4-us",
   "version": "0.1.0",
+  "main": "./server/index.js",
   "proxy": "http://localhost:4500",
   "private": true,
   "dependencies": {
@@ -22,7 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node ./server/index.js && npm build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
